_deploy/kustomize/overlays/local/virtual-service.yaml
---
# API BACKEND VIRTUAL SERVICE PATCH
# Exposes API backend to localhost
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: profile-service-api

spec:
  gateways:
  - local-gateway
  hosts:
  - '*'
